@@ -18,6 +18,8 @@
 
 	* bin/tp-robot: Remove mistaken argument check.
 
+	* lib/run.py: Put rejection reason in the subject line.
+
 2007-06-12  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/tp-robot, lib/run.py: Tweak a few messages.
